Fixed overflow issues with textarea

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -227,6 +227,14 @@ select {
 	align-content:center;
 }
 
+.box textarea {
+	width:100%;
+	height:100%;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;	
+}
+
 /* navigation dropdown menu */
 .navigation, .navigation-submenu {
     display: inline-block;
